# zed-elasticsearch

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/plans/: elasticsearch-es-language-extension.md  option-c-native-json-body.md  phase-2-language-server.md
.github/workflows/: ci.yml  release-server.yml
examples/: edge-cases.es  sample.es  value-types.es
languages/elasticsearch/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  outline.scm
server/: Cargo.toml
server/src/: analysis.rs  main.rs
server/tests/: lsp_integration.rs
src/: lib.rs
