[package]
name = "elasticsearch-language-server"
version = "0.1.0"
edition = "2021"
description = "Language server for Elasticsearch Console (.es) files"
license = "Apache-2.0"

# This is a binary crate: it compiles to an executable that Zed launches and
# talks to over stdin/stdout using the Language Server Protocol (LSP).
[[bin]]
name = "elasticsearch-language-server"
path = "src/main.rs"

[dependencies]
# tower-lsp implements the LSP plumbing (JSON-RPC framing over stdio, request
# dispatch). We implement its `LanguageServer` trait; it calls our methods.
tower-lsp = "0.20.0"
# tokio is the async runtime that actually drives tower-lsp's async tasks.
tokio = { version = "1", features = ["full"] }
# serde_json parses request bodies so we can flag malformed JSON. Already in the
# tree via tower-lsp; declaring it directly lets the analysis module use it.
serde_json = "1"
# serde provides the Deserialize/Visitor traits we hand-implement to detect
# duplicate object keys (serde_json::Value silently collapses them, so we need a
# custom deserializer). Already in the tree via serde_json.
serde = "1"
